<resources>
    <string name="app_name">Wosyl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tnc">Terms &amp; condition</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="sms_code">SMS Code</string>

    <string name="empty_name">Please enter name</string>
    <string name="empty_lastname">Please enter last name</string>
    <string name="empty_email">Please enter email</string>
    <string name="empty_password">Please enter password</string>
    <string name="empty_confirm_pwd">Please enter confirm password</string>
    <string name="confirm_pwd_not_match">Confirm password not match</string>
    <string name="empty_phone_number">Please enter phone number</string>
    <string name="empty_sms_code">Please enter sms code</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
