<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/user_background">

    <ImageView
        android:id="@+id/signup_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_user_back"/>

    <ImageView
        android:id="@+id/signup_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_back"
        android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha"/>

    <TextView
        android:id="@+id/screen_title_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimn10"
        android:layout_below="@id/signup_progress"
        android:text="Basic Info"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"/>


    <TextView
        android:id="@+id/terms_and_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimn10"
        android:text="@string/tnc"
        android:textColor="@color/text_lite_grey"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/terms_and_condition"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/dimn18"
        android:layout_marginRight="@dimen/dimn18"
        android:background="@drawable/blue_round_corner_solid"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/next_btn"
        android:layout_below="@id/screen_title_lbl"
        android:layout_marginLeft="@dimen/dimn18"
        android:layout_marginRight="@dimen/dimn18"
        android:layout_marginTop="@dimen/dimn26">

        <EditText

            android:id="@+id/signup_name_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_round_corner"
            android:drawableLeft="@drawable/ic_name_left"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"/>

        <EditText

            android:id="@+id/signup_lastname_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_round_corner"
            android:drawableLeft="@drawable/ic_name_left"
            android:hint="@string/lastname"
            android:layout_below="@id/signup_name_txt"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/dimn14"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/signup_email_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/signup_lastname_txt"
            android:layout_marginTop="@dimen/dimn14"
            android:background="@drawable/input_round_corner"
            android:drawableLeft="@drawable/ic_name_left"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/signup_password_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/signup_email_txt"
            android:layout_marginTop="@dimen/dimn14"
            android:background="@drawable/input_round_corner"
            android:drawableLeft="@drawable/ic_action_lock_outline"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"/>

    </RelativeLayout>
</RelativeLayout>