<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/user_background"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_image_btn"
        android:src="@drawable/ic_user_back"
        android:layout_marginTop="@dimen/dimn18"
        android:layout_marginLeft="@dimen/dimn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/signup_progress"
        android:layout_below="@id/back_image_btn"
        android:layout_marginTop="@dimen/dimn10"
        android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="SMS Verification"
        android:layout_below="@id/signup_progress"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/dimn10"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimn14"
        android:paddingRight="@dimen/dimn10">

        <EditText
            android:id="@+id/signup_confirm_sms_txt"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:hint="@string/sms_code"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_action_lock_outline"
            android:background="@drawable/input_round_corner"
            android:layout_marginTop="@dimen/dimn14"
            android:layout_height="48dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/next_btn"
            android:layout_marginTop="@dimen/dimn14"
            android:background="@drawable/blue_round_corner_solid"
            android:text="@string/next"

            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/terms_and_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tnc"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>